--- a/src/main/resources/properties/local-properties.yaml
+++ b/src/main/resources/properties/local-properties.yaml
@@ -6,9 +6,9 @@ sftp:
   port: "8422"
   user: "linkr"
   password: "![1Q/EViuP4xrWHl/PnYWOJQ==]"
-  working_directory: "upload/theu"
-  personal_directory: "Mamy"
-  invoices_file: "invoices.json"
-  hoinaco_file: "hoinaco.csv"
-  absences_file: "Absences.csv"
-  product_file: "products.csv"
+  working-directory: "upload/theu"
+  personal-directory: "Mamy"
+  invoices-file: "invoices.json"
+  hoinaco-file: "hoinaco.csv"
+  absences-file: "Absences.csv"
+  product-file: "Local/products.csv"
